--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -34,5 +34,5 @@ permalink: '/omrade/arbeid/index.html'
     </div>
   </main>
 
-  {% include "partials/contact.njk" %}
+  {% include "partials/kontakt.njk" %}
 {%- endblock -%}
