--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -38,5 +38,5 @@ permalink: '/omrade/helse-og-sykdom/index.html'
     </div>
   </main>
 
-  {% include "partials/contact.njk" %}
+  {% include "partials/kontakt.njk" %}
 {%- endblock -%}
