--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,24 +1,24 @@
-<footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-center" x-bind:inert="menuOpen || myPageOpen">
-  <div class="col-container">
-    <div class="flex flex-col items-center py-3">
-      <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
-        <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
-          <path stroke="currentColor" stroke-width="2" d="m7 9 6-6 6 6m-6 10V4" />
-        </svg>
-        <span>Til toppen</span>
-      </a>
-    </div>
-    <div class="pt-8 border-t border-white/10">
+<footer class="grid pb-12 grid-cols-center bg-deepblue-800" x-bind:inert="menuOpen || myPageOpen">
+  <div class="flex flex-col items-center">
+    <a class="flex items-center gap-1.5 py-1.5 pl-2.5 pr-4 text-sm text-center -translate-y-1/2 bg-slate-100 rounded-full hover:underline hover:text-blue-600 hover:bg-white hover:shadow-lg" href="{{ page.url }}#">
+      <svg class="w-4 h-4 translate-y-px" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
+        <path stroke="currentColor" stroke-width="2" d="m7 9 6-6 6 6m-6 10V4" />
+      </svg>
+      <span>Til toppen</span>
+    </a>
+  </div>
+  <div class="text-white col-container ">
+    <div class="pt-8">
       <div class="sm:columns-2 md:columns-3">
         {%- for section in footer.links -%}
           <div class="mb-8 sm:pr-8 md:mb-0">
-            <h2 class="text-sm font-semibold tracking-widest uppercase text-deepblue-300">
+            <h2 class="text-xs font-bold tracking-wider uppercase text-deepblue-300">
               {{ section.title | safe }}
             </h2>
             <ul class="mt-2 mb-7 break-inside-avoid">
               {%- for item in section.linkList -%}
                 <li class="py-1 pr-2 break-before-avoid">
-                  <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ item.text }}</a>
+                  <a class="underline underline-offset-3 decoration-blue-300/70 hover:decoration-2 hover:text-orange-200" href="#">{{ item.text }}</a>
                 </li>
               {%- endfor -%}
             </ul>
@@ -26,7 +26,7 @@
         {%- endfor -%}
 
         <div class="-mt-2.5">
-          <a href="#" class="inline-flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 fine:hover:border-deepblue-400/50 fine:hover:bg-deepblue-600 rounded fine:hover:shadow-lg fine:hover:text-orange-200">
+          <a href="#" class="inline-flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 hover:border-deepblue-400/50 hover:bg-deepblue-600 rounded hover:shadow-lg hover:text-orange-200">
             <span class="">{{ footer.screenshare.text }}</span>
             {{ footer.screenshare.icon | svgContents("w-5 h-5") | safe }}
           </a>
@@ -35,14 +35,14 @@
 
     </div>
 
-    <div class="flex flex-col justify-between mt-6 text-sm sm:flex-row-reverse">
-      <div class="flex flex-col justify-between gap-3 mt-6 sm:gap-6 sm:flex-row sm:self-end">
+    <div class="flex flex-col justify-between mt-16 text-sm border-t sm:flex-row-reverse border-white/10">
+      <div class="flex flex-col justify-between gap-3 mt-4 sm:gap-6 sm:flex-row sm:self-end">
         {%- for link in footer.legal -%}
-          <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ link.text }}</a>
+          <a class="underline underline-offset-3 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ link.text }}</a>
         {%- endfor -%}
       </div>
 
-      <div class="grid gap-2 mt-16">
+      <div class="grid gap-2 mt-12 sm:mt-4">
         <a href="#" class="cursor-pointer">
           {{ '/src/_includes/svg/logo.svg' | svgContents('h-6') | safe }}
           <span class="sr-only">NAV</span>
