--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -5,7 +5,7 @@
     <button class="py-1 tracking-widest uppercase cursor-default" x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false" type="button">{{ activeRole }}</button>
   </div>
 
-  <nav class="z-10 grid grid-cols-center">
+  <nav class="z-10 grid grid-cols-combi">
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-container">
 
       {# Logo #}
