--- a/src/_includes/partials/kontakt.njk
+++ b/src/_includes/partials/kontakt.njk
@@ -1,4 +1,4 @@
-<aside class="grid pt-16 pb-16 grid-cols-center bg-slate-100 wave">
+<aside class="grid pt-16 pb-16 grid-cols-combi bg-slate-100 wave">
   <h2 class="text-2xl font-semibold col-container">Kontakt oss</h2>
   <div class="grid gap-8 mt-4 {{ 'md:grid-cols-3' if contact.length === 3 }} md:gap-x-12 col-container"> 
     {% for item in contact %}
