--- a/src/index.njk
+++ b/src/index.njk
@@ -35,7 +35,7 @@ noJS: true
 
 
 {%- block content -%}
-  <div class="py-page lg:py-20 grid grid-cols-center font-[375]">
+  <div class="py-page lg:py-20 grid grid-cols-combi font-[375]">
     <div class="grid items-start gap-2 col-container overflow-clip rounded-xl">
       <div class="grid gap-2 lg:grid-cols-3">
         {% for item in pages %}      
