--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -10,7 +10,7 @@ alpine: true
 
 {%- block content -%}
   <main class="" x-bind:inert="menuOpen || myPageOpen">
-    <div class="grid py-12 grid-cols-center">
+    <div class="grid py-12 grid-cols-combi">
       <div class="col-container">
         <h2 class="text-xl font-semibold">Hva kan vi hjelpe deg med?</h2>
         <ul class="grid gap-1.5 mt-4 xs:text-lg sm:gap-4 sm:grid-cols-2 xl:grid-cols-3">
@@ -26,7 +26,7 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-4 pb-12 grid-cols-center">
+    <div class="grid pt-4 pb-12 grid-cols-combi">
       <div class="col-container">
         <h2 class="text-xl font-semibold">Snarveier</h2>
         <ul class="text-lg sm:gap-8 sm:columns-2">
@@ -44,7 +44,7 @@ alpine: true
     </div>
 
 
-    {# <div class="grid grid-cols-center">
+    {# <div class="grid grid-cols-combi">
       <div class="col-container">
         <h2>Søke og ettersende</h2>
         <ul>
@@ -60,7 +60,7 @@ alpine: true
       </div>
     </div> #}
 
-    <div class="grid pt-10 pb-8 grid-cols-center">
+    <div class="grid pt-10 pb-8 grid-cols-combi">
       <div class="col-container">
         <h2 class="text-xl font-semibold">Aktuelt</h2>
         <div class="grid gap-2 sm:block sm:gap-8 sm:columns-2">
@@ -76,7 +76,7 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-8 pb-24 grid-cols-center">
+    <div class="grid pt-8 pb-24 grid-cols-combi">
       <div class="col-container">
         <h2 class="text-xl font-semibold">Kontakt oss</h2>
         <div class="grid gap-8 mt-4 sm:grid-cols-2">
