--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -8,7 +8,7 @@ permalink: '/omrade/arbeid/index.html'
 
 {%- block content -%}
   <main class="pb-12 bg-white">
-    <div class="grid pt-12 grid-cols-center">
+    <div class="grid pt-12 grid-cols-combi">
       <div class="relative col-main">
         {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
         {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
