--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -18,7 +18,7 @@ title: 'Områdesidemal'
 {% endmacro %}
 
 {%- block content -%}
-  <div class="py-8 grid grid-cols-center font-[375]">
+  <div class="py-8 grid grid-cols-combi font-[375]">
     <div class="px-8 col-full">
       <a class="inline-flex items-center gap-1 px-3 py-2 mb-4 -mx-3 font-semibold text-blue-600 hover:underline" href="../">
         {{ '/src/_includes/svg/icons/chevron-left.svg' | svgContents('') | safe }}
