--- a/src/pages/tema/soketips/soketips.njk
+++ b/src/pages/tema/soketips/soketips.njk
@@ -12,7 +12,7 @@ published: "Oppdatert 20. mars 2024"
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="grid pt-16 pb-32 grid-cols-center">
+  <main class="grid pt-16 pb-32 grid-cols-combi">
     {% if type %}      
     <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
     {% endif %}
