--- a/src/pages/typografi.njk
+++ b/src/pages/typografi.njk
@@ -7,7 +7,7 @@ permalink: '/typografi/index.html'
 {%- extends 'blank.njk' -%}
 
 {%- block content -%}
-  <div class="py-page grid grid-cols-center font-[375]">
+  <div class="py-page grid grid-cols-combi font-[375]">
     <div class="prose col-main">
       <div class="text-sm font-medium tracking-widest uppercase opacity-80">Kicker / Overline</div>
       <h1 class="-translate-x-[0.05em] mt-0 font-bold text-4xl/tight text-balance">Heading nivå 1</h1>
