--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="grid pb-12 grid-cols-center bg-deepblue-800" x-bind:inert="menuOpen || myPageOpen">
+<footer class="grid pb-12 grid-cols-combi bg-deepblue-800" x-bind:inert="menuOpen || myPageOpen">
   <div class="flex flex-col items-center">
     <a class="flex items-center gap-1.5 py-1.5 pl-2.5 pr-4 text-sm text-center -translate-y-1/2 bg-slate-100 rounded-full hover:underline hover:text-blue-600 hover:bg-white hover:shadow-lg" href="{{ page.url }}#">
       <svg class="w-4 h-4 translate-y-px" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
