--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -8,7 +8,7 @@ permalink: '/omrade/helse-og-sykdom/index.html'
 
 {%- block content -%}
   <main class="pb-12 bg-white">
-    <div class="grid grid-cols-center">
+    <div class="grid grid-cols-combi">
       <div class="relative pt-12 col-main">
         {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
         {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
