--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -9,27 +9,27 @@ permalink: '/omrade/arbeid/index.html'
 {%- block content -%}
   <main class="pb-12 bg-white">
     <div class="grid pt-12 grid-cols-combi">
-      <div class="relative col-main">
+      <div class="relative col-container">
         {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
-        {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
-        <h1 class="mt-2 font-black tracking-tight text-4xl/tight text-balance">
+        <div class="tracking-widest small-caps">{{ category | safe }}</div>
+        <h1 class="font-black tracking-tight text-2xl/tight text-balance">
           {{ title | safe }}
         </h1>
-        <h2 class="col-span-2 col-start-1 mt-2 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
-      </div>
+        <h2 class="col-span-2 col-start-1 mt-4 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
 
-      <div class="mt-12 col-wide lg:col-side">
-        <a class="block rounded-sm px-4 py-2.5 font-medium leading-snug text-blue-600 underline border-l-4 bg-slate-100 border-slate-300 hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
-      </div>
+        <div class="mt-8">
+          <a class="block rounded-sm px-4 py-2.5 font-medium leading-snug text-blue-600 underline border-l-4 bg-slate-100 border-slate-300 hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
+        </div>
 
-      <div class="mt-8 col-wide lg:col-main">
-        <ul>
-          {%- for item in situationList -%}
-            <li class="relative flex flex-col py-2 border-t sm:py-3 border-slate-200">
-              <a class="font-normal leading-snug text-blue-600 text-balance hover:text-blue-500 hover:underline" href="#">{{ item.title | safe }}</a>
-            </li>
-          {%- endfor -%}
-        </ul>
+        <div class="mt-12">
+          <ul class="lg:columns-2 lg:gap-12">
+            {%- for item in situationList -%}
+              <li class="relative flex flex-col py-2 -mt-px border-t border-b sm:py-3 border-slate-200 break-inside-avoid">
+                <a class="font-normal leading-snug text-blue-600 text-balance hover:text-blue-500 hover:underline" href="#">{{ item.title | safe }}</a>
+              </li>
+            {%- endfor -%}
+          </ul>
+        </div>
       </div>
     </div>
   </main>
