--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -11,8 +11,8 @@ permalink: '/omrade/helse-og-sykdom/index.html'
     <div class="grid grid-cols-combi">
       <div class="relative pt-12 col-main">
         {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
-        {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
-        <h1 class="mt-2 -translate-x-[0.05em] font-extrabold text-4xl/tight text-balance">{{ title | safe }}</h1>
+        <div class="tracking-widest small-caps">{{ category | safe }}</div>
+        <h1 class="-translate-x-[0.05em] font-extrabold text-2xl/tight text-balance">{{ title | safe }}</h1>
         <h2 class="col-span-2 col-start-1 mt-1 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
 
