--- a/src/pages/tema/soketips/soketips.njk
+++ b/src/pages/tema/soketips/soketips.njk
@@ -14,9 +14,9 @@ published: "Oppdatert 20. mars 2024"
 {%- block content -%}
   <main class="grid pt-16 pb-32 grid-cols-combi">
     {% if type %}      
-    <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+    <div class="tracking-widest small-caps">{{ type | safe }}</div>
     {% endif %}
-    <h1 class="font-extrabold text-4xl/tight text-balance">{{ title | safe }}</h1>
+    <h1 class="font-extrabold text-2xl/tight text-balance">{{ title | safe }}</h1>
     <div class="mt-4 text-pretty">
       <p class="text-lg">{{ ingress | safe }}</p>
 
