Oppdatering av design

--- a/src/_includes/macros/tile.njk
+++ b/src/_includes/macros/tile.njk
@@ -1,10 +1,12 @@
 {% macro tile(args) %}
- <div class="relative px-5 py-4 border rounded-lg border-slate-300 {{ args.theme }}">
-  {{ args.icon | svgContents('max-w-16 h-auto w-[calc(8vw+1rem)]') | safe if args.icon }}
-  <a class="flex-1 text-base font-semibold leading-snug after:absolute after:inset-0" href="#">{{ args.title }}</a>
+ <div class="relative px-5 py-4 rounded-lg border border-slate-300 shadow-sm bg-white {{ args.theme }}">
   {% if args.kicker %}
-    <p class="text-xs font-medium tracking-wider uppercase opacity-75">{{ args.kicker | safe }}</p>
+    <p class="font-medium leading-tight tracking-wider pointer-events-none opacity-80 small-caps">{{ args.kicker | safe }}</p>
   {% endif %}
+
+  {{ args.icon | svgContents('max-w-16 h-auto w-[calc(8vw+1rem)]') | safe if args.icon }}
+  <a class="z-10 flex-1 text-lg font-semibold leading-snug after:absolute after:inset-0" href="#">{{ args.title }}</a>
+
   {# {% if args.content %}
     <p class="opacity-85">{{ args.content | safe }}</p>
   {% endif %} #}
