--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -4,7 +4,7 @@
 
   {%- if params.variant -%}
     {%- if params.variant === "primary" -%}
-      {%- set variant = "font-medium" -%}
+      {%- set variant = "" -%}
     {%- endif -%}
 
     {%- if params.variant === "secondary" -%}
@@ -12,7 +12,7 @@
     {%- endif -%}
   {%- endif -%}
 
-  <a href="{{ params.href or '#' }}" class="bg-blue-50 rounded-full hover:bg-blue-500 hover:text-white text-center py-2 px-5 no-underline {{ variant or default }} {{ params.class }}">
+  <a href="{{ params.href or '#' }}" class="bg-white hover:bg-blue-500 hover:text-white font-medium border-blue-600 border-2 rounded-lg text-center py-2 px-8 no-underline {{ variant or default }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
