Litt fiksing på områdesider

--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -17,8 +17,10 @@ permalink: '/omrade/arbeid/index.html'
         </h1>
         <h2 class="col-span-2 col-start-1 mt-4 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
 
-        <div class="mt-8">
-          <a class="block rounded-sm px-4 py-2.5 font-medium leading-snug text-blue-600 underline border-l-4 bg-slate-100 border-slate-300 hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
+        <div class="grid mt-8 lg:grid-cols-2 lg:gap-12">
+          <div>
+            <a class="block rounded-sm px-4 py-2.5 font-medium leading-snug text-blue-600 underline border-l-4 bg-slate-100 border-slate-300 hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>
+          </div>
         </div>
 
         <div class="mt-12">
