--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -53,7 +53,13 @@
     font-weight: 700;
     text-wrap: pretty;
   }
-  :is(.prose, .accordion, .expander) > :where(h2, h3) {
+  :is(.prose, .accordion, .expander) > :where(h2) {
+    font-size: var(--text-fluid-2);
+    line-height: 1.33;
+    letter-spacing: -0.0125em;
+  }
+
+  :is(.prose, .accordion, .expander) > :where(h3) {
     font-size: var(--text-fluid-1);
     line-height: 1.33;
     letter-spacing: -0.0125em;
@@ -74,14 +80,16 @@
   :is(.prose, .accordion, .expander) > h4 {
     font-size: var(--text-fluid-0);
     line-height: 1.33;
-    letter-spacing: -0.0125em;
+    letter-spacing: 0;
     margin-block-start: 1.6em;
   }
   :is(.prose, .accordion, .expander) > h5 {
-      font-size: var(--text-fluid--1);
+      font-size: var(--text-fluid-0);
       font-weight: 650;
       line-height: 1.33;
       margin-block-end: 0.25em;
+      letter-spacing: 0.05em;
+      font-variant-caps: all-small-caps;
   }
   :where(.prose, .accordion, .expander) > :where(h3, h4, h5) + *:not(h3, h4, h5, ul, ol, details) {
     margin-block-start: 0.25em;
@@ -120,21 +128,28 @@
     inline-size: 100%;
   }
   :where(.prose, .accordion, .expander) > table :where(th, td) {
-    padding-inline-end: theme('spacing.4');
-    padding-block: theme('spacing.1');
+    padding-inline: theme('spacing.2') theme('spacing.4');
+    padding-block: theme('spacing.2');
   }
   :where(.prose, .accordion, .expander) > table :where(tbody tr) :where(th, td) {
     border-top-width: 1px;
     border-color: theme('colors.slate.300');
   }
   :where(.prose, .accordion, .expander) > table :where(thead th) {
-    font-weight: semibold;
-    font-size: var(--text-fluid--1);
+    font-weight: 600;
+    line-height: theme('lineHeight.snug');
+    vertical-align: bottom;
   }
   :where(.prose, .accordion, .expander) > table :where(tbody th) {
     font-weight: 375;
   }
-
+  :where(.prose, .accordion, .expander) > table :where(tbody tr:nth-child(odd)) > * {
+    background-color: theme('colors.slate.100');
+  }
+  :where(.prose, .accordion, .expander) > table :where(tbody tr:first-child) :where(th, td) {
+    border-top-width: 2px;
+    border-color: theme('colors.slate.400');
+  }
   /* Table of contents (toc) */
   .toc-highlight {
     border-inline-start-width: 4px;
