--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -15,7 +15,7 @@ variant: '1'
       <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg">{{ ingress | safe }}</p>
-        <div class="px-4 py-3 leading-normal border-l-4 border-slate-300 bg-slate-100 text-balance">
+        <div class="px-4 py-3 leading-normal border-l-4 border-slate-300 bg-origin-border bg-slate-100 text-balance">
           {{ audience | markdown | safe if audience }}
         </div>
       </div>
